# treasure_hunters

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
resources/i18n/: en_us.json  zh_cn.json
resources/maps/: start.tmx  terrains.tsx  test.tmx  tilesets.tsx
src/: global.h  main.c  map.c  map.h  setting.c  setting.h  translation.c  translation.h
src/cjson/: cJSON.c  cJSON.h
src/entities/: base.c  base.h  player.c  player.h
src/image/: animation.c  animation.h  image.h  sprite.c  sprite.h
src/map/: tilemap.c  tilemap.h
src/resource/: loader.c  loader.h  respack.c  respack.h
src/resources/: assets.c  assets.h  loader.c  loader.h  respack.c  respack.h
src/scenes/: background.c  background.h  scene.c  scene.h  setting_menu.c  setting_menu.h  start_menu.c  start_menu.h  subscene.c  subscene.h  world.c  world.h
src/ui/: animation.c  animation.h  sprite.c  sprite.h  text.c  text.h  ui.c  ui.h  widget.c  widget.h
src/ui/text/: bitmap.c  bitmap.h  text.h  ttf.c  ttf.h
tools/: gen_resources.py  genres.py  map_editor.py  respack.py  tmx2map.py  tsx2tile.py
